--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
         />
-        <!-- Relaciono con boostrap -->
+        <!-- Relaciono con hoja de estilos -->
         <link rel="stylesheet" href="styles.css" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
