--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,11 @@
         />
         <!-- Relaciono con hoja de estilos -->
         <link rel="stylesheet" href="styles.css" />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"
+        ></script>
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -38,7 +43,7 @@
         <title>React App</title>
     </head>
     <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <script src="/client/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <div id="root"></div>
         <!--
       This HTML file is a template.
@@ -50,7 +55,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
       
-    -->
-        <script src="/client/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    </body>
+    --></body>
 </html>
