--- a/client/public/index.html
+++ b/client/public/index.html
@@ -40,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>React App</title>
+        <title>My Market</title>
     </head>
     <body>
         <script src="/client/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
